tests/error/class_res.gw
// [skip] is reserved
class now{}
